--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: kestrel-redis
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6380}:6379"
     volumes:
       - redis-data:/data
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
@@ -25,7 +25,7 @@ services:
     restart: unless-stopped
     working_dir: /app
     ports:
-      - "8000:8000"
+      - "${BACKEND_PORT:-8001}:8000"
     environment:
       - PYTHONUNBUFFERED=1
       - PYTHONPATH=/app
@@ -52,7 +52,7 @@ services:
     restart: unless-stopped
     working_dir: /app
     ports:
-      - "5173:5173"
+      - "${FRONTEND_PORT:-5174}:5173"
     environment:
       - REACT_APP_API_URL=http://localhost:8000/api/v1
       - NODE_ENV=development
@@ -96,7 +96,7 @@ services:
     container_name: ollama
     restart: unless-stopped
     ports:
-      - "11434:11434"
+      - "${OLLAMA_PORT:-11435}:11434"
     environment:
       - OLLAMA_HOST=0.0.0.0:11434
       - OLLAMA_KEEP_ALIVE=24h
@@ -132,7 +132,7 @@ services:
     container_name: searxng
     restart: unless-stopped
     ports:
-      - "8080:8080"
+      - "${SEARXNG_PORT:-8081}:8080"
     environment:
       - SEARXNG_BASE_URL=http://localhost:8080/
       - SEARXNG_SETTINGS_PATH=/etc/searxng/settings.yml
