Update for prevent confcilt

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Docker Compose Environment Variables
 
+# Container Names (customize to prevent conflicts)
+REDIS_CONTAINER_NAME=kestrel-deeper-redis
+SEARXNG_CONTAINER_NAME=kestrel-deeper-searxng
+
 # Service Ports (customize to prevent conflicts)
 REDIS_PORT=6380
 BACKEND_PORT=8001
